# cmake_min_lib

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: main.cpp
cmake/: common.cmake
include/: minLib.h
src/: minLib.cpp  minLib.h
